# buildlight

./: .env.example  .gitignore  .mise.toml  .rubocop.yml  .standard.yml  .travis.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE  Procfile  README.md  Rakefile  action.yml  app.json  assets.go  assets_prod.go  build.zig  build.zig.zon  circle.yml  config.ru  embed.go  fly.toml  go.mod  go.sum  mise.toml  package-lock.json  package.json
.circleci/: config.yml
.github/: dependabot.yml
config/: application.example.yml  application.rb  cable.yml  database.yml  dockerfile.yml  environment.rb  importmap.rb  puma.rb  routes.rb  secrets.yml  unicorn.rb
db/: schema.rb
migrations/: 20121123160543_create_statuses.sql  20121123172057_add_payload_to_statuses.sql  20121123182506_rename_status_to_color_on_statuses.sql  20121123195427_split_colors_on_statuses.sql  20121124190606_add_user_to_statuses.sql  20160510201736_create_devices.sql  20160510212722_add_identifier_to_devices.sql  20160510213407_add_name_to_devices.sql  20161012193415_add_service_to_status.sql  20230303181951_add_webhook_url_to_devices.sql  20230304135152_add_slug_to_devices.sql  20230304144230_make_identifier_nullable_on_devices.sql  20230305131208_add_status_to_devices.sql  20230311115915_add_workflow_to_statues.sql  20230311115915_initial_schema.down.sql  20230311115915_initial_schema.up.sql
particle/: Build Light.fzz  buildlight.ino  printable-board.txt
pi/: Gemfile  buildlight_listener.service  config.ru  listener.rb  readme.txt
public/: application.css  websocket.js
spec/: factories.rb  (+2 more)
src/: app.rs  (+13 more)
(+143 files in other folders)
